[gd_scene load_steps=5 format=3 uid="uid://b8pl1w7x4ook5"]

[ext_resource type="Script" uid="uid://oiyt7s3kd5nf" path="res://addons/ThemeEditor/font_preset_editor.gd" id="1_vepmi"]
[ext_resource type="Texture2D" uid="uid://cjct6oh8b1nyb" path="res://addons/ThemeEditor/icon_duplicate.svg" id="2_lxirr"]
[ext_resource type="Texture2D" uid="uid://do53psudsfxxr" path="res://addons/ThemeEditor/icon_open.svg" id="3_iawyp"]
[ext_resource type="Texture2D" uid="uid://dl72oslti4imj" path="res://addons/ThemeEditor/icon_close.svg" id="4_lxirr"]

[node name="FontPresetEditor" type="HBoxContainer"]
offset_right = 230.0
offset_bottom = 32.0
size_flags_horizontal = 3
script = ExtResource("1_vepmi")

[node name="preset_name" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "<null>"

[node name="duplicate_button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_lxirr")

[node name="load_font_button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_iawyp")

[node name="remove_preset_button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_lxirr")
